--- a/pages/_main-index.ejs.html
+++ b/pages/_main-index.ejs.html
@@ -1,7 +1,7 @@
 <div id="wrapper">
 <div id="mapping" class="slide">
 	<div class="chartTitle">Proposed Bloomington neighborhoods</div>
-	<div class="chatter">Shows <span class='legendary green3'>proposed neighborhood</span> borders and designations in Bloomington.</div>
+	<div class="chatter">Shows <span class='legendary green3'>proposed neighborhood</span> boundaries in Bloomington. Click for names.</div>
 	<div class="map" id="map"></div>
 	<div class="byline">Source: Bloomington resident Curtis Griesel | Graphic by <a href="http://www.startribune.com/jeff-hargarten/274254381/" target="new_">Jeff Hargarten, Star Tribune</a> | <a href="./data/maindata.xlsx" target="new_">Download Data</a></div>
 </div>
